objects/Con_Req_Group__c.object
<CustomObject>
    <fields>
        <fullName>Brief_Description_of_Document__c</fullName>
        <inlineHelpText>Brief description of the document to be signed (ie: Contract for XX Project or Agreement for XX)</inlineHelpText>
        <label>Brief Description of Document</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Days_Allowed__c</fullName>
        <inlineHelpText>Number of days per the interconnection tariff that Borrego has to make this payment</inlineHelpText>
        <label>Business Days Allowed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRG_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to trigger email alert workflow once the CRG has been approved.</description>
        <label>CRG Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Con Req Groups</relationshipLabel>
        <relationshipName>Con_Req_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>A list of the Category fields of associated Construction Requisition records.  Set automatically by trigger.</description>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CheckRequestDescription__c</fullName>
        <description>Description of the check or why its needed</description>
        <inlineHelpText>Description of the check or why its needed</inlineHelpText>
        <label>Check Request Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Check_Instructions__c</fullName>
        <description>special instructions if a check is needed - this is required if Check Request is YES. If there are no special instructions just enter NA. If amount of check is less than CRG total, please specify here.</description>
        <inlineHelpText>special instructions if a check is needed - this is required if Check Request is YES. If there are no special instructions just enter NA. If amount of check is less than CRG total, please specify here.</inlineHelpText>
        <label>Check Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Check_Request__c</fullName>
        <description>indicates if there is a Check needed for this CRG</description>
        <inlineHelpText>indicates if there is a Check needed for this CRG</inlineHelpText>
        <label>Check Request</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Con_Req_Record_Types__c</fullName>
        <label>Con Req Record Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the person tasked with coordinating the approval of this step</inlineHelpText>
        <label>Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Con_Req_Groups1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_Code_Number__c</fullName>
        <description>A list of the Cost Code Number fields of associated Construction Requisition records delimited by a semi-colon.  Set automatically by trigger.</description>
        <label>Cost Code Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Final_Approval__c</fullName>
        <description>con req group approval process will put the date of final approval in this field. should be hidden from users</description>
        <inlineHelpText>Date that payment must be made by to avoid negative consequences</inlineHelpText>
        <label>Date of Final Approval</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deadline_Date__c</fullName>
        <description>Date of final approval plus the business days allowed</description>
        <formula>Datevalue(Date_of_Final_Approval__c) +  Business_Days_Allowed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date of final approval plus the business days allowed</inlineHelpText>
        <label>Deadline Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Distribution_Method__c</fullName>
        <description>how will check be distributed, this will be required if Check Request field is Yes</description>
        <inlineHelpText>how will check be distributed, this will be required if Check Request field is Yes</inlineHelpText>
        <label>Distribution Method</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Docusign_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Docusign needed?</description>
        <inlineHelpText>Is Docusign needed?</inlineHelpText>
        <label>Docusign Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Recipients_and_Order__c</fullName>
        <inlineHelpText>Enter the recipient&apos;s name(s) and email and order of signature.</inlineHelpText>
        <label>External Recipients and Order</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Failure_to_make_payment_consequences__c</fullName>
        <inlineHelpText>Negative consequences resulting from failure to make this payment</inlineHelpText>
        <label>Failure to make payment consequences</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>consequence 1</fullName>
                    <label>Withdrawal of Application</label>
                </value>
                <value>
                    <fullName>consequence 2</fullName>
                    <label>Cure notice with new deadline</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Signatories_and_order__c</fullName>
        <inlineHelpText>Enter the Borrego signatories’ names in order of signature.</inlineHelpText>
        <label>Internal Signatories and order</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsAttachment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hidden field set automatically by trigger (Attachment_SalesOrderLine). If True, means there is at least one attachment associated with the Con Req Group record.</description>
        <inlineHelpText>Hidden field set automatically by trigger (Attachment_SalesOrderLine). If True, means there is at least one attachment associated with the Con Req Group record.</inlineHelpText>
        <label>IsAttachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hidden field. When set to true the Con Req Group record and associated Construction Requisitions cannot be changed. This is enforced by triggers and class files.</description>
        <label>IsLocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Material_CRG__c</fullName>
        <label>Material CRG</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Module_Inverter_CR_Total__c</fullName>
        <label>Module/Inverter CR Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Customer_CO_s__c</fullName>
        <formula>Project__r.NonCustomerChangeOrders__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulled from Project</inlineHelpText>
        <label>Non Customer CO&apos;s</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Eng_Sub_CRGs__c</fullName>
        <description>Rollup helper counts the number of SOLs with Cost Codes that are not Subcontractor Engineering codes. A CRG with ONLY SOLs using Sub Eng codes (as such, if this number is zero) then it follows the Sub Eng Approval processes. 
The reverse logic is confusing but it is easier to maintain as there are less cost codes. Currently those are 01-1218, 03-1318, 03-1418, 03-1518, 03-1618.</description>
        <label># Non Eng Sub CRGs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Attachments__c</fullName>
        <description>used to limit adding attachments after the record has been approved</description>
        <label>Number of Attachments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Negative_Remaining_Budgets__c</fullName>
        <description>used for submitting CRGs with Roll Up Helper
Counts the number of line items with negative &quot;remaining available budget&quot; amounts</description>
        <label>Number of Negative Remaining Budgets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OK_to_Submit__c</fullName>
        <formula>IF( AND(Vendor__r.AcctSeed__Accounting_Active__c =TRUE,  Number_of_Negative_Remaining_Budgets__c=0, BEGINS(Cost_Code_Number__c, &quot;0&quot;),  IsAttachment__c &lt;&gt;FALSE), IMAGE(&quot;/servlet/servlet.FileDownload?file=015800000015Isw&quot;, &quot;WHITE&quot;),

IF( AND(IsAttachment__c &lt;&gt;FALSE, OR(BEGINS(Cost_Code_Number__c, &quot;07&quot;), CONTAINS( Category__c , &quot;OH&quot;))) ,IMAGE(&quot;/servlet/servlet.FileDownload?file=015800000015Isw&quot;, &quot;WHITE&quot;),

IF(ISPICKVAL(Status__c,&quot;Approved&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=015800000015IuY&quot;, &quot;WHITE&quot;), 

IF(Vendor__r.AcctSeed__Accounting_Active__c =FALSE,IMAGE(&quot;/servlet/servlet.FileDownload?file=015800000016gx0&quot;, &quot;WHITE&quot;),

IF(IsAttachment__c =FALSE,IMAGE(&quot;/servlet/servlet.FileDownload?file=015800000015sR0&quot;, &quot;WHITE&quot;), 

IF(AND( Number_of_Negative_Remaining_Budgets__c &gt;0, OR(NOT(BEGINS(Cost_Code_Number__c, &quot;07&quot;)), NOT(CONTAINS( Category__c , &quot;OH&quot;)))),IMAGE(&quot;/servlet/servlet.FileDownload?file=015800000015ItV&quot;, &quot;WHITE&quot;), 

&quot;NO&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OK to Submit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>O_M_Manager__c</fullName>
        <formula>Project__r.O_M_Manager__r.FirstName &amp; &quot; &quot; &amp; Project__r.O_M_Manager__r.LastName</formula>
        <label>O&amp;M Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityStage__c</fullName>
        <description>displays opportunity stage from the related project/opportunity</description>
        <formula>Project__r.Opportunity_Stage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>displays opportunity stage from the related project/opportunity</inlineHelpText>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <inlineHelpText>If Other is selected from above picklist please fill in</inlineHelpText>
        <label>Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pages_Where_Signature_is_Required__c</fullName>
        <inlineHelpText>Specify which pages a signature or initials are required.</inlineHelpText>
        <label>Pages Where Signature is Required</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payee_Address_City__c</fullName>
        <description>city address for mailing check</description>
        <inlineHelpText>city address for mailing check</inlineHelpText>
        <label>Payee Address City</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payee_Address_State__c</fullName>
        <description>payee&apos;s state as part of address to mail check to</description>
        <inlineHelpText>payee&apos;s state as part of address to mail check to</inlineHelpText>
        <label>Payee Address State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payee_Address_Street__c</fullName>
        <description>street address for Payee, used to mail check</description>
        <inlineHelpText>street address for Payee, used to mail check</inlineHelpText>
        <label>Payee Address Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payee_Postal_Code__c</fullName>
        <description>zip or postal code of payee&apos;s address to send check to</description>
        <inlineHelpText>zip or postal code of payee&apos;s address to send check to</inlineHelpText>
        <label>Payee Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectKickoffDate__c</fullName>
        <formula>Project__r.Project_Kickoff_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Kickoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Detail__c</fullName>
        <label>Project Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_PM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Con_Req_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>AcctSeed__Project__c</referenceTo>
        <relationshipLabel>Con Req Groups</relationshipLabel>
        <relationshipName>Con_Req_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Con Req Groups</relationshipLabel>
        <relationshipName>Con_Req_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RODUserID__c</fullName>
        <description>Formula that chooses the ROD Id bases on Project branch. Works in conjunction with LH</description>
        <formula>IF(CONTAINS( Project__r.Ops_Division__r.Name , &quot;New England&quot;), &quot;005800000076grS&quot;, 
IF(CONTAINS( Project__r.Ops_Division__r.Name , &quot;Mid Atlantic&quot;), &quot;005300000011hLN&quot;, 
IF(CONTAINS( Project__r.Ops_Division__r.Name , &quot;EPC - West&quot;), &quot;00534000008y7KU&quot;, 
IF(CONTAINS( Project__r.Ops_Division__r.Name , &quot;Midwest&quot;), &quot;00534000009JEmc&quot;, 
&quot;NA&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ROD User ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>used with Lookup Helper, fills in ROD based on Branch for approval alerts</description>
        <label>ROD</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Con_Req_Groups2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remaining_Available_Budget_Roll_Up__c</fullName>
        <inlineHelpText>Sum of the Remaining Available Budget field on all associated Construction Requisition records.</inlineHelpText>
        <label>Remaining Available Budget Roll Up</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Requested_Delivery_Date__c</fullName>
        <label>Requested Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requisition_Total_Roll_Up__c</fullName>
        <label>Requisition Total Roll Up</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SOLs__c</fullName>
        <description>count of the number of related SOL&apos;s, updated by RH used as a requirement to the submit for approval processes no need to be on layouts</description>
        <inlineHelpText>count of the number of related SOL&apos;s</inlineHelpText>
        <label># SOLs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Manager__c</fullName>
        <description>The regional sales manager based on the Project Branch. Used in reporting.</description>
        <formula>IF( 
CONTAINS( Project__r.Ops_Division__r.Name , &quot;New England&quot;), &quot;Jared Connell&quot;, 

IF( 
OR(
CONTAINS( Project__r.Ops_Division__r.Name , &quot;Mid Atlantic&quot;),
CONTAINS( Project__r.Ops_Division__r.Name , &quot;New York&quot; )
), &quot;Amy McDonough&quot;, 

IF( 
CONTAINS( Project__r.Ops_Division__r.Name , &quot;Midwest&quot;), &quot;Alex Farkes&quot;, 

IF(
CONTAINS( Project__r.Ops_Division__r.Name , &quot;EPC - West&quot; ), &quot;Kyle Kearney&quot;, 

null 
))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The regional sales manager based on the Project Branch. Used in reporting.</inlineHelpText>
        <label>Sales Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order</label>
        <referenceTo>AcctSeedERP__Sales_Order__c</referenceTo>
        <relationshipLabel>Con Req Groups</relationshipLabel>
        <relationshipName>Con_Req_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Rate__c</fullName>
        <label>Sales Tax Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ServiceVisit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Visit</label>
        <referenceTo>SV__c</referenceTo>
        <relationshipLabel>Con Req Groups</relationshipLabel>
        <relationshipName>Con_Req_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Con Req Groups</relationshipLabel>
        <relationshipName>Con_Req_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <inlineHelpText>For Service Reqs Reporting- notes what type of cost the req should be categorized under</inlineHelpText>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Warranty</fullName>
                </value>
                <value>
                    <fullName>Billable</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Charge Back</fullName>
                </value>
                <value>
                    <fullName>Warranty - Resi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ship_To_City__c</fullName>
        <label>Ship To City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Contact_Phone__c</fullName>
        <formula>Ship_To_Contact__r.Phone</formula>
        <label>Ship To Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Con Req Groups (Ship To Contact)</relationshipLabel>
        <relationshipName>Con_Req_Groups1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_To_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To Site</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Project__c</field>
                <operation>equals</operation>
                <valueField>Site__c.Project__c</valueField>
            </filterItems>
            <infoMessage>Site must be related to Project of Con Req Group.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Con Req Groups</relationshipLabel>
        <relationshipName>Con_Req_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_To_State__c</fullName>
        <label>Ship To State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Street__c</fullName>
        <label>Ship To Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Zip__c</fullName>
        <label>Ship To Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use Customer, Subcontractor, or Branch Account to indicate where you would like this order shipped to.</inlineHelpText>
        <label>Ship to Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Con Req Groups</relationshipLabel>
        <relationshipName>Con_Req_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Group_Percent__c</fullName>
        <formula>Project__r.TaxGroup__r.Tax_Group_Percent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Tax Group Percent</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tax_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Group</label>
        <referenceTo>Tax_Group__c</referenceTo>
        <relationshipLabel>Con Req Groups</relationshipLabel>
        <relationshipName>Con_Req_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TotalRequisitionCoststoDate__c</fullName>
        <description>pulls Total Requisition Costs to Date from related project which is a sum of all the total requisition costs for all budget line items</description>
        <formula>Project__r.TotalRequisitionCoststoDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>pulls Total Requisition Costs to Date from related project which is a sum of all the requisition costs to date for all budget line items</inlineHelpText>
        <label>Total Requisition Costs to Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trigger_Time_03__c</fullName>
        <formula>Now()-0.038</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trigger Time 03</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Use_Project_Ship_To__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used by O&amp;M users to indicated and auto fill Ship to Address on CRG with address from related project</description>
        <inlineHelpText>by checking this box it will auto fill the Ship To Address with the same information from the related project, if not you need to fill in the Ship To.</inlineHelpText>
        <label>Use Project Ship To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Vendor__c</field>
                <operation>equals</operation>
                <valueField>Contact.Account.Id</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Con Req Groups</relationshipLabel>
        <relationshipName>Con_Req_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.AcctSeed__Accounting_Type__c</field>
                <operation>equals</operation>
                <value>Vendor, Vendor, Customer and Vendor</value>
            </filterItems>
            <infoMessage>Accounting Type field must be &quot;Vendor&quot;.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Con Req Groups (Vendor)</relationshipLabel>
        <relationshipName>Con_Req_Groups1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WorkOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Con Req Group</relationshipLabel>
        <relationshipName>Con_Req_Group</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X7C_Submittal_Date__c</fullName>
        <formula>Ship_To_Site__r.MarkettoOwnerDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Brings over the 7C Submittal Datel date from site</inlineHelpText>
        <label>7C Submittal Date</label>
        <type>Date</type>
    </fields>
    <label>Con Req Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CRG-{000000}</displayFormat>
        <label>Con Req Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Con Req Groups</pluralLabel>
    <recordTypes>
        <fullName>Service_Visit</fullName>
        <active>true</active>
        <label>Service Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_Request_Required_Fields</fullName>
        <active>true</active>
        <description>If yes is chosen under Check Request field certain fields become required to fill out</description>
        <errorConditionFormula>AND(
ISPICKVAL( Check_Request__c  , &quot;Yes&quot;),
OR(
ISBLANK(  Check_Instructions__c  ),
ISBLANK( Distribution_Method__c  ),
ISBLANK( Payee_Address_Street__c ),
ISBLANK( Payee_Address_City__c ),
ISBLANK(TEXT( Payee_Address_State__c )),
ISBLANK(  Payee_Postal_Code__c  )
)
)</errorConditionFormula>
        <errorMessage>If this is for a Check Request the folllowing fields must be filled out:  Check Instructions, Distribution Method, Payee Address, City, State and Zip.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Docusign_Required_fields</fullName>
        <active>true</active>
        <description>If Docusign if checked off, certain fields become required to fill out when not a Boston Project</description>
        <errorConditionFormula>AND(
Docusign_Needed__c = TRUE,
NOT(ISPICKVAL( Project__r.Branch__c, &quot;Boston&quot;)), 

OR(
ISBLANK(  External_Recipients_and_Order__c   ),
ISBLANK(  Brief_Description_of_Document__c   ),
ISBLANK(  Pages_Where_Signature_is_Required__c ))
)</errorConditionFormula>
        <errorMessage>If this is for a Docusign Request the following needs to be filled out:  External Recipients, Brief Description of Document, Pages where signature is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Modify_attachments_after_approval</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Number_of_Attachments__c )
&amp;&amp;
ISPICKVAL( Status__c , &quot;Approved&quot;)</errorConditionFormula>
        <errorMessage>You cannot add or remove attachments once the CRG has been approved</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Service_REQ_Ship_to_Required</fullName>
        <active>true</active>
        <description>requires ship to fields to be manually filled out if they are not using same address associated with project</description>
        <errorConditionFormula>AND( 
 ISNEW() ,
RecordType.Id = &quot;01234000000BnNq&quot;,
 Use_Project_Ship_To__c = FALSE,
OR(
ISBLANK( Ship_To_Contact__c),
ISBLANK( Ship_To_Street__c ),
ISBLANK(  Ship_To_City__c ),
ISBLANK(  Ship_To_State__c),
ISBLANK(  Ship_To_Zip__c)
))</errorConditionFormula>
        <errorMessage>If you are not using the same Ship to address from the Project you need to manually add in a Ship to Contact, Street, City, State &amp; Zip.  If you would like to use the Project Address, you need to check off the box Use Project Ship To.</errorMessage>
    </validationRules>
</CustomObject>